working event_loop

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,4 +1,4 @@
 all: 
-	gcc -O0 -g server.c config.c ip.c -o main
+	gcc -O0 -g server.c config.c ip.c thread_pool.c event_loop.c -o main
 clean:
 	rm main
